# soa-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: markdown.yaml
collection_service/: __init__.py  main.py
util_service/: __init__.py  main.py
